--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "your-project-name-here-client",
+  "name": "m3-loca-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
