--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "multiselect-react-dropdown": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-map-gl": "^6.1.18",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
