--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.3",
     "cloudinary-react": "^1.7.0",
     "mapbox-gl": "^2.6.1",
     "multiselect-react-dropdown": "^2.0.7",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-map-gl": "^6.1.18",
     "react-router-dom": "^6.0.2",
