--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.1.3",
     "cloudinary-react": "^1.7.0",
+    "mapbox-gl": "^2.6.1",
     "multiselect-react-dropdown": "^2.0.7",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
@@ -17,7 +18,8 @@
     "react-map-gl": "^6.1.18",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
